# web_10_test

./: README.md  pyproject.toml
hw_project/: db.sqlite3
hw_project/quotes/: urls.py  utils.py  views.py
hw_project/quotes/static/quotes/: style.css
hw_project/quotes/templates/quotes/: base.html  index.html
hw_project/quotes/templatetags/: extract.py
